--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test": "node test-api.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "langchain": "^0.1.25",
     "@langchain/openai": "^0.0.25",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "langchain": "^0.1.25",
+    "langdetect": "^0.2.1",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
