--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@langchain/openai": "^0.0.25",
+    "@slack/bolt": "^4.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "langchain": "^0.1.25",
     "langdetect": "^0.2.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
