--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "langchain": "^0.1.25",
     "langdetect": "^0.2.1",
+    "mongoose": "^8.18.1",
     "pdf-parse": "^1.1.1",
     "ws": "^8.18.3"
   },
