--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "langdetect": "^0.2.1",
     "mongoose": "^8.18.1",
     "pdf-parse": "^1.1.1",
+    "uuid": "^13.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
