--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@slack/bolt": "^4.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "langchain": "^0.1.25",
     "langdetect": "^0.2.1",
     "mongoose": "^8.18.1",
+    "mongoose-aggregate-paginate": "^2.0.2",
+    "mongoose-paginate": "^5.0.3",
     "pdf-parse": "^1.1.1",
     "uuid": "^13.0.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
